--- a/styles/style.css
+++ b/styles/style.css
@@ -173,9 +173,7 @@ section {
   display: flex; }
 
 header {
-  margin: 2.5% 0; }
-
-nav {
+  margin: 2.5% 0;
   border: 1px solid blue; }
 
 nav .flexRow {
