--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,1 +1,14 @@
 $sectionSpace: 2.5%;
+
+// colors
+
+$primaryColor: #161616;
+$secondaryColor: #333333;
+$tertiaryColor: #e0e2db;
+$accentColor: #2a4494;
+
+// fonts
+
+
+$primaryFont: 'Open Sans', sans-serif;
+$secondaryFont: 'Lato', sans-serif;
