--- a/styles/style.css
+++ b/styles/style.css
@@ -183,6 +183,10 @@ html {
   font-size: 125%;
 }
 
+body {
+  font-family: "Lato", sans-serif;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -190,6 +194,11 @@ html {
 
 li {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #e0e2db;
 }
 
 img {
@@ -214,12 +223,36 @@ section {
 }
 
 header {
-  border: 1px solid blue;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  background-color: blue;
+  background-color: #333333;
+}
+
+header h1 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
+  font-family: "Open Sans", sans-serif;
+}
+
+header nav {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+}
+
+form {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 
 .headerMain.flexRow {
@@ -236,14 +269,25 @@ label[for="searchArtist"] {
   margin-top: 1.5%;
 }
 
+.searchBar input[type="text"] {
+  background-color: #333333;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-right-color: transparent;
+}
+
 main {
-  margin: 100px 0;
+  background-color: #161616;
+  color: #e0e2db;
+}
+
+.mainContainer {
+  padding: 100px 0;
 }
 
 .songImage, .songListWindow {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  border: 1px solid red;
 }
 
 .songImage {
@@ -260,18 +304,27 @@ main {
   height: 400px;
 }
 
+.songListWindow h2 {
+  margin-bottom: 2%;
+  padding-left: 1.75%;
+}
+
 .songList {
   height: 325px;
   overflow: scroll;
 }
 
-.songList h2, .songList li {
-  margin-bottom: 1.5%;
-}
-
 .songList li:nth-child(2n + 1) {
   background-color: black;
-  color: white;
+}
+
+.songList li {
+  margin-bottom: 1.5%;
+  padding: 1.75% 0 1.75% 3%;
+}
+
+.songList li:hover {
+  background-color: #2a4494;
 }
 
 .suggestions {
@@ -297,11 +350,10 @@ main {
 footer {
   text-align: center;
   padding: .75% 0;
-  border: 1px solid purple;
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
-  background: blue;
+  background: #333333;
 }
 /*# sourceMappingURL=style.css.map */
