attempting to make songs clickable by search

--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -86,6 +86,10 @@ main{
         margin-bottom: 1.5%;
     }
 
+    :hover {
+        cursor: pointer;
+    }
+
     li:nth-child(2n + 1){
         background-color: black;
         color: white;
