initialData DOM append setup

--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -128,11 +128,19 @@ main{
         background-color: black;
     }
 
+    li:nth-child(2n + 1):hover {
+        background-color: $accentColor;
+    }
+
     li {
         margin-bottom: 1.5%;
         padding: 1.75% 0 1.75% 3%;
-    }
 
+    }
+    
+    li:hover {
+        background-color: $accentColor;
+    }
     :hover {
         cursor: pointer;
     }
