--- a/styles/style.css
+++ b/styles/style.css
@@ -145,15 +145,18 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   clip: rect(0 0 0);
   overflow: hidden; }
 
+* {
+  margin: 0;
+  padding: 0; }
+
 html {
   font-size: 125%; }
 
 body {
   font-family: "Lato", sans-serif; }
 
-* {
-  margin: 0;
-  padding: 0; }
+h1, h2 {
+  font-family: "Open Sans", sans-serif; }
 
 li {
   list-style: none; }
@@ -188,8 +191,7 @@ header {
   header h1 {
     -webkit-box-flex: 1;
     -ms-flex: 1 0 50%;
-    flex: 1 0 50%;
-    font-family: "Open Sans", sans-serif; }
+    flex: 1 0 50%; }
   header nav {
     -webkit-box-flex: 1;
     -ms-flex: 1 0 50%;
