--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -92,27 +92,39 @@ main{
     background-color: $primaryColor;
     color: $tertiaryColor;
 }
-// Section with song info
 
 .mainContainer {
-
     padding: 100px 0;
 }
 
- .songImage, .songListWindow {
-    // shorthand for <grow> <shrink> <basis>
-    flex-wrap: wrap;
-    // border: 1px solid red;
-}
-
-.songImage {
-    flex: 1 1 40%;
-}
-
-.songListWindow {
-    flex: 1 1 60%;
-    margin-left: 3%;
+.infoContainer,
+.songListContainer {
     height: 400px;
+}
+
+.mainInfoDisplay {
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.infoContainer {
+    flex: 1 0 40%;
+    flex-flow: column nowrap;
+}
+
+.songInfo {
+    padding: 3% 0;
+
+    h3 {
+        text-transform: capitalize;
+    }
+}
+
+
+// song list section
+.songListContainer {
+    flex: 1 0 60%;
 
     h2 {
         margin-bottom: 2%;
