quick resposive fix

--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -51,33 +51,29 @@ header {
     left: 0;
     right: 0;
     background-color: $secondaryColor;
-
-    h1 {
-        flex:1 0 50%;
-        font-family: $primaryFont;
-    }
-
-    nav {
-        flex: 1 0 50%;
-        display: flex;
-        flex-flow: column nowrap;
-    }
 }
 
-form{
-    align-self: flex-end;
-}
-
-.headerMain.flexRow {
+.headerContainer {
+    flex-flow: row wrap;
     justify-content: space-between;
+    align-items: center;
+    padding: 1%;
 }
 
-label[for="searchArtist"]{
+input[type="radio"] {
     margin-right: 3%;
 }
 
+label[for="searchArtist"] {
+    margin-right: 7%;
+}
+
+.searchFunction {
+    flex-flow: column wrap;
+}
+
 .searchBar {
-    margin-top: 1.5%;
+    margin-top: 2%;
 
     input[type="text"] {
         background-color: $secondaryColor;
@@ -94,12 +90,12 @@ main{
 }
 
 .mainContainer {
-    padding: 100px 0;
+    padding: 150px 0 0.1% 0;
 }
 
 .infoContainer,
 .songListContainer {
-    height: 400px;
+    max-height: 20%;
 }
 
 .mainInfoDisplay {
@@ -113,6 +109,10 @@ main{
     flex-flow: column nowrap;
 }
 
+.songImage {
+    width: 300px;
+}
+
 .songInfo {
     padding: 3% 0;
 
@@ -124,7 +124,7 @@ main{
 
 // song list section
 .songListContainer {
-    flex: 1 0 60%;
+    flex: 1 1 60%;
 
     h2 {
         margin-bottom: 2%;
@@ -133,7 +133,7 @@ main{
 }
 
 .songList {
-    height: 325px;
+    max-height: 350px;
     overflow: scroll; 
 
     li:nth-child(2n + 1){
@@ -175,15 +175,39 @@ main{
 footer {
     text-align: center;
     padding: .75% 0;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
     background: $secondaryColor;
 }
 
+@media (max-width: 1000px) {
+    
+   .mainInfoDisplay {
+        flex-flow: column nowrap;
+        align-items: center;
+    } 
 
+    .infoContainer,
+    .songListContainer {
+        width: 100%;
+    }
 
+    .infoContainer {
+        align-items: center;
+    }
 
+    .songInfo {
+        text-align: center;
+    }
+}
 
+@media (max-width: 768px) {
 
+    .headerContainer {
+        flex-flow: column nowrap;
+        align-items: center;
+        text-align: center;
+    }
+
+    .mainContainer {
+        padding: 200px 0 0.5% 0;
+    }
+}
