--- a/styles/style.css
+++ b/styles/style.css
@@ -230,43 +230,37 @@ header {
   background-color: #333333;
 }
 
-header h1 {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 50%;
-          flex: 1 0 50%;
-  font-family: "Open Sans", sans-serif;
-}
-
-header nav {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 50%;
-          flex: 1 0 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
+.headerContainer {
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
-}
-
-form {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
-}
-
-.headerMain.flexRow {
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1%;
 }
 
-label[for="searchArtist"] {
+input[type="radio"] {
   margin-right: 3%;
 }
 
+label[for="searchArtist"] {
+  margin-right: 7%;
+}
+
+.searchFunction {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+}
+
 .searchBar {
-  margin-top: 1.5%;
+  margin-top: 2%;
 }
 
 .searchBar input[type="text"] {
@@ -282,12 +276,12 @@ main {
 }
 
 .mainContainer {
-  padding: 100px 0;
+  padding: 150px 0 0.1% 0;
 }
 
 .infoContainer,
 .songListContainer {
-  height: 400px;
+  max-height: 20%;
 }
 
 .mainInfoDisplay {
@@ -313,6 +307,10 @@ main {
           flex-flow: column nowrap;
 }
 
+.songImage {
+  width: 300px;
+}
+
 .songInfo {
   padding: 3% 0;
 }
@@ -323,8 +321,8 @@ main {
 
 .songListContainer {
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 60%;
-          flex: 1 0 60%;
+      -ms-flex: 1 1 60%;
+          flex: 1 1 60%;
 }
 
 .songListContainer h2 {
@@ -333,7 +331,7 @@ main {
 }
 
 .songList {
-  height: 325px;
+  max-height: 350px;
   overflow: scroll;
 }
 
@@ -373,10 +371,46 @@ main {
 footer {
   text-align: center;
   padding: .75% 0;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
   background: #333333;
+}
+
+@media (max-width: 1000px) {
+  .mainInfoDisplay {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .infoContainer,
+  .songListContainer {
+    width: 100%;
+  }
+  .infoContainer {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .songInfo {
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .headerContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  .mainContainer {
+    padding: 200px 0 0.5% 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
