--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -57,7 +57,7 @@ header {
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 1%;
+    padding: 1% 0;
 }
 
 input[type="radio"] {
