--- a/styles/style.css
+++ b/styles/style.css
@@ -241,7 +241,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1%;
+  padding: 1% 0;
 }
 
 input[type="radio"] {
