--- a/styles/style.css
+++ b/styles/style.css
@@ -145,18 +145,15 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   clip: rect(0 0 0);
   overflow: hidden; }
 
-* {
-  margin: 0;
-  padding: 0; }
-
 html {
   font-size: 125%; }
 
 body {
   font-family: "Lato", sans-serif; }
 
-h1, h2 {
-  font-family: "Open Sans", sans-serif; }
+* {
+  margin: 0;
+  padding: 0; }
 
 li {
   list-style: none; }
@@ -177,6 +174,15 @@ section {
   max-width: 1600px;
   margin: 0 auto; }
 
+.flexColumn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column wrap;
+  flex-flow: column wrap; }
+
 .flexRow {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -191,7 +197,8 @@ header {
   header h1 {
     -webkit-box-flex: 1;
     -ms-flex: 1 0 50%;
-    flex: 1 0 50%; }
+    flex: 1 0 50%;
+    font-family: "Open Sans", sans-serif; }
   header nav {
     -webkit-box-flex: 1;
     -ms-flex: 1 0 50%;
@@ -255,8 +262,6 @@ main {
   overflow: scroll; }
   .songList li:nth-child(2n + 1) {
     background-color: black; }
-  .songList li:nth-child(2n + 1):hover {
-    background-color: #2a4494; }
   .songList li {
     margin-bottom: 1.5%;
     padding: 1.75% 0 1.75% 3%; }
@@ -268,14 +273,10 @@ main {
   .suggestions h2 {
     text-align: center;
     margin-bottom: 1.5%; }
-
-.songPair {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 33.33%;
-  flex: 1 1 33.33%;
-  text-align: center; }
-  .songPair li:first-child {
-    margin-bottom: 3%; }
+  .suggestions li {
+    display: inline-block;
+    -ms-flex-preferred-size: 200px;
+    flex-basis: 200px; }
 
 footer {
   text-align: center;
