--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -130,11 +130,6 @@ main{
 // song list section
 .songListContainer {
     flex: 1 1 60%;
-
-    h2 {
-        margin-bottom: 2%;
-        padding-left: 1.75%;
-    }
 }
 
 .songList {
@@ -153,9 +148,35 @@ main{
     li:hover {
         background-color: $accentColor;
     }
-
-    
 }
+
+.trackHeader {
+    margin-bottom: 1.5%;
+}
+
+.trackHeading,
+.track {
+    flex-flow: row wrap;
+    justify-content: flex-start;
+
+    li,
+    p {
+        flex: 1 0 50%;
+    }
+
+    p:hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
+}
+
+.trackHeading {
+
+    li:nth-of-type(2n + 1) {
+        padding-left: 2%;
+    }
+}
+
 
 // Section with similar artists
 
@@ -181,7 +202,7 @@ footer {
     background-color: $secondaryColor;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1140px) {
     
    .mainInfoDisplay {
         flex-flow: column nowrap;
@@ -200,6 +221,24 @@ footer {
     .songInfo {
         text-align: center;
     }
+
+    .trackHeading,
+    .track {
+        justify-content: space-around;
+        text-align: center;
+
+        li,
+        p {
+            flex: 0 0 25%;
+        }
+    }
+
+    .trackHeading {
+
+    li:nth-of-type(2n + 1) {
+        padding-left: 5%;
+    }
+}
 }
 
 @media (max-width: 768px) {
