--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -114,10 +114,6 @@ main{
     flex-flow: column nowrap;
 }
 
-.songImage {
-    width: 300px;
-}
-
 .songInfo {
     padding: 3% 0;
 
@@ -229,14 +225,18 @@ footer {
 
         li,
         p {
-            flex: 0 0 25%;
+            flex: 1 0 25%;
         }
     }
 
     .trackHeading {
 
-    li:nth-of-type(2n + 1) {
+    li:nth-of-type(1) {
         padding-left: 5%;
+    }
+
+    li:nth-of-type(2) {
+        padding-left: 1%;
     }
 }
 }
