--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -5,10 +5,11 @@ $sectionSpace: 2.5%;
 $primaryColor: #161616;
 $secondaryColor: #333333;
 $tertiaryColor: #e0e2db;
-$accentColor: #2a4494;
+$accentColor: darkorange;
+// $accentColor: #2a4494;
+
 
 // fonts
-
 
 $primaryFont: 'Open Sans', sans-serif;
 $secondaryFont: 'Lato', sans-serif;
