--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,6 @@ button[disabled], input[disabled] {
   cursor: default; }
 
 input[type=checkbox], input[type=radio] {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0; }
 
@@ -140,10 +139,13 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   border: 0;
   padding: 0;
   white-space: nowrap;
-  -webkit-clip-path: inset(100%);
   clip-path: inset(100%);
   clip: rect(0 0 0);
   overflow: hidden; }
+
+* {
+  margin: 0;
+  padding: 0; }
 
 html {
   font-size: 125%; }
@@ -151,9 +153,8 @@ html {
 body {
   font-family: "Lato", sans-serif; }
 
-* {
-  margin: 0;
-  padding: 0; }
+h1, h2 {
+  font-family: "Open Sans", sans-serif; }
 
 li {
   list-style: none; }
@@ -175,17 +176,10 @@ section {
   margin: 0 auto; }
 
 .flexColumn {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: column wrap;
   flex-flow: column wrap; }
 
 .flexRow {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex; }
 
 header {
@@ -193,40 +187,61 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  background-color: #333333; }
+  background-color: #161616;
+  color: #e0e2db; }
 
 .headerContainer {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
   flex-flow: row wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   padding: 1% 0; }
 
+form {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400; }
+
 input[type="radio"] {
-  margin-right: 3%; }
+  cursor: pointer; }
+
+input[type="radio"]:checked + label {
+  color: darkorange; }
+
+label {
+  transition: color 0.15s ease-in; }
+
+label:hover {
+  color: darkorange;
+  cursor: pointer; }
 
 label[for="searchArtist"] {
-  margin-right: 7%; }
+  margin-right: 3.5%; }
 
 .searchFunction {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: column wrap;
-  flex-flow: column wrap; }
+  flex-direction: column; }
 
 .searchBar {
   margin-top: 2%; }
   .searchBar input[type="text"] {
     background-color: #333333;
-    border-top-color: transparent;
-    border-left-color: transparent;
-    border-right-color: transparent; }
+    border: 1.5px solid transparent;
+    height: 100%;
+    padding-left: 10px;
+    color: #e0e2db;
+    transition: border 0.15s ease-in; }
+  .searchBar input[type="text"]:focus {
+    border-color: darkorange; }
+  .searchBar input[type="text"]::placeholder {
+    color: #e0e2db; }
+  .searchBar input[type="submit"] {
+    padding: 0 10px 1px 10px;
+    border-radius: 5px;
+    border: 2px solid #333333;
+    color: #e0e2db;
+    background: transparent;
+    transition: color 0.15s ease-in, border-color 0.15s ease-in, background 0.15s ease-in; }
+  .searchBar input[type="submit"]:hover {
+    background: darkorange;
+    border-color: transparent; }
 
 main {
   background-color: #161616;
@@ -240,24 +255,12 @@ main {
   max-height: 20%; }
 
 .mainInfoDisplay {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
   flex-flow: row wrap;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start; }
 
 .infoContainer {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 0 40%;
   flex: 1 0 40%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: column nowrap;
   flex-flow: column nowrap; }
 
 .songInfo {
@@ -266,8 +269,6 @@ main {
     text-transform: capitalize; }
 
 .songListContainer {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 60%;
   flex: 1 1 60%; }
 
 .songList {
@@ -278,32 +279,25 @@ main {
   .songList li {
     margin-bottom: 1.5%;
     padding: 1.75% 0 1.75% 3%; }
-  .songList li:hover {
-    background-color: #2a4494;
-    cursor: pointer; }
 
 .trackHeader {
   margin-bottom: 1.5%; }
 
 .trackHeading,
 .track {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
   flex-flow: row wrap;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start; }
   .trackHeading li,
   .trackHeading p,
   .track li,
   .track p {
-    -webkit-box-flex: 1;
-    -ms-flex: 1 0 50%;
     flex: 1 0 50%; }
+  .trackHeading p,
+  .track p {
+    transition: color 0.25s ease-in; }
   .trackHeading p:hover,
   .track p:hover {
-    text-decoration: underline;
+    color: darkorange;
     cursor: pointer; }
 
 .trackHeading li:nth-of-type(2n + 1) {
@@ -314,50 +308,45 @@ main {
   margin-bottom: 1.5%; }
 
 .suggestions .grid {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr; }
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr; }
   .suggestions .grid li {
-    margin-bottom: 1.5%; }
+    margin-bottom: 1.5%;
+    transition: color 0.25s ease-in; }
   .suggestions .grid li:hover {
     cursor: pointer;
-    background-color: #2a4494; }
+    color: darkorange; }
 
 footer {
   text-align: center;
   padding: .75% 0;
-  background-color: #333333; }
+  background-color: #161616;
+  color: #e0e2db;
+  font-size: 0.8rem; }
+  footer span {
+    color: darkorange; }
+  footer p:last-child {
+    font-size: 0.6rem; }
 
 @media (max-width: 1140px) {
   .mainInfoDisplay {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: column nowrap;
     flex-flow: column nowrap;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center; }
   .infoContainer,
   .songListContainer {
     width: 100%; }
   .infoContainer {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center; }
   .songInfo {
     text-align: center; }
   .trackHeading,
   .track {
-    -ms-flex-pack: distribute;
     justify-content: space-around;
     text-align: center; }
     .trackHeading li,
     .trackHeading p,
     .track li,
     .track p {
-      -webkit-box-flex: 1;
-      -ms-flex: 1 0 25%;
       flex: 1 0 25%; }
   .trackHeading li:nth-of-type(1) {
     padding-left: 5%; }
@@ -366,12 +355,7 @@ footer {
 
 @media (max-width: 768px) {
   .headerContainer {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: column nowrap;
     flex-flow: column nowrap;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     text-align: center; }
   .mainContainer {
